components/Scrollable/Scrollable.module.scss
.scrollable {
  &.x {
    overflow-x: auto;
    overflow-x: overlay;
    overflow-y: hidden;
  }

  &.y {
    overflow-y: auto;
    overflow-y: overlay;
    overflow-x: hidden;
  }

  &.both {
    overflow: auto;
    overflow: overlay;
  }

  scrollbar-color: transparent transparent;
  scrollbar-width: thin;
  &:hover {
    scrollbar-color: var(--base--border-color) transparent;
  }

  &::-webkit-scrollbar {
    background-color: none;
    width: 16px;
  }
  &::-webkit-scrollbar-button {
    display: none;
  }
  &::-webkit-scrollbar-thumb {
    background-color: transparent;
    border-radius: 8px;
    background-clip: padding-box;
    border: 4px solid transparent;
    width: 8px;
  }
  &:hover::-webkit-scrollbar-thumb {
    background-color: #80808027;
  }
  &::-webkit-scrollbar-track {
    background-color: transparent;
    &:hover {
      background-color: #80808007;
    }
  }
}

